# simple-container-manager

./: CMakeLists.txt  README.md  main.cpp  signalreceiver.cpp  signalreceiver.h  signaltransmitter.cpp  signaltransmitter.h
model/: dockercli.cpp  dockercli.h  dockereventstream.cpp  dockereventstream.h  preferencesmanager.cpp  preferencesmanager.h
model/data-objects/: containerinfo.cpp  containerinfo.h  containerpreferences.cpp  containerpreferences.h  containerstatus.h  dockerevent.cpp  dockerevent.h
src/: CMakeLists.txt
